githubhy published a site update

--- a/宋人轶事汇编卷二十七.html
+++ b/宋人轶事汇编卷二十七.html
@@ -163,10 +163,29 @@
 见王诜<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%89.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B8%89-%E7%8E%8B%E8%AF%9C-3">3</a>。</p></li>
 <li><p><span id="宋轶二十七-周邦彦-4"></span>
 自宣政间，周美成、柳耆卿辈出，自制乐章，有曰《侧犯》、《尾犯》、《花犯》、《玲珑四犯》。……犯者，侵犯之义。二帝北狩，曲中之谶，深可畏哉。《贵耳集》卷上。</p></li>
-<li><p><span id="宋轶二十七-周邦彦-5"></span>
-道君幸李师师家，偶周邦彦先在焉，知道君至，遂匿于床下。道君自新橙一颗，云：「江南初进来。」遂与师师谑语，邦彦悉闻之，檃括成《少年游》云：「并刀如水，吴盐胜雪，纤手破新橙。」后云：「严城上，已三更。马滑霜浓，不如休去，直是少人行。」李师师因歌此词，道君问谁作，李师师奏云「周邦彦词」。道君大怒，坐朝宣谕蔡京云：「开封府有监税周邦彦者，闻课额不登，如何京尹不按发来？」蔡京罔知所以，奏云：「容臣退朝，呼京尹叩问，续得复奏。」京尹至，蔡以御前圣旨谕之。京尹云：「惟周邦彦课额增羡。」蔡云：「上意如此，只得迁就将上。」得旨，周邦彦职事废弛，可日下押出国门。隔一二日，道君复幸李师师家，不见李师师，问其家，知送周监税。道君方以邦彦出国门为喜，既至不遇，坐久至更初，李始归，愁眉泪睫，憔悴可掬。道君大怒云：「尔去那里？」李奏：「臣妾万死，知周邦彦得罪，押出国门，略致一杯相别，不知官家来。」道君问曾有词否？李奏云：「有《兰陵王》词，今『柳阴直』者是也。」道君云：「唱一遍看！」李奏云：「容臣妾奉一杯，歌此词为官家寿。」曲终，道君大喜，复召为大晟乐正。后官至大晟乐乐府待制。……当时李师师家有二邦彦，一周美成，一李士美，皆为道君狎客。士美因而为宰相。《贵耳集》卷下。《青泥莲花记》卷十三。《词苑丛谈》卷六。《本事词》卷上。《词林纪事》卷七。《宋稗类钞》卷四。</p></li>
+</ol>
+<ol start="5" style="list-style-type: decimal">
+<li>
+<span id="宋轶二十七-周邦彦-5"></span>
+道君 <span style="color: magenta; font-size: 80%">徽宗</span> 幸李师师家，偶周邦彦先在焉，知道君至，遂匿于床下。道君自新橙一颗，云：「江南初进来。」遂与师师谑语，邦彦悉闻之， 檃括 <span style="color: magenta; font-size: 80%">yǐn kuò。就原有的文章、著作加以剪裁、改写</span> 成《少年游》云：「并刀如水，吴盐胜雪，纤手破新橙。」后云：「 严城 <span style="color: magenta; font-size: 80%">戒备森严的城池</span> 上，已三更。马滑霜浓，不如休去，直是少人行。」
+李师师因歌此词，道君问谁作，李师师奏云「周邦彦词」。道君大怒，坐朝宣谕蔡京云：「开封府有监税周邦彦者，闻 课额 <span style="color: magenta; font-size: 80%">赋税的数额</span> 不 登 <span style="color: magenta; font-size: 80%">高 [high]</span> ，如何京尹不按发来？」蔡京罔知所以，奏云：「容臣退朝，呼京尹叩问，续得复奏。」京尹至，蔡以御前圣旨谕之。京尹云：「惟周邦彦课额 增羡 <span style="color: magenta; font-size: 80%">增加羡馀</span> 。」蔡云：「上意如此，只得迁就将上。」得旨，周邦彦职事废弛， 可 <span style="color: magenta; font-size: 80%">就，便</span> 日下押出国门。
+隔一二日，道君复幸李师师家，不见李师师，问其家，知送周监税。道君方以邦彦出国门为喜，既至不遇，坐久至更初，李始归，愁眉泪睫，憔悴可掬。道君大怒云：「尔去那里？」李奏：「臣妾万死，知周邦彦得罪，押出国门，略致一杯相别，不知官家来。」道君问曾有词否？李奏云：「有《兰陵王》词，今『柳阴直』者是也。」道君云：「唱一遍看！」李奏云：「容臣妾奉一杯，歌此词为官家寿。」曲终，道君大喜，复召为 大晟乐<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content="&lt;p&gt;大晟乐&lt;/p&gt;&lt;p&gt;北宋崇宁四年（1105）所定“宫廷雅乐”，经宋徽宗定名为“大晟乐”。此后专门设立大晟府来掌管雅乐及原属鼓吹署所主管的一部分鼓吹乐。《宋史 职官志》说：“崇宁初，置局议大乐，乐成，置府建官以司之，礼、乐始分为二。”&lt;/p&gt;"><sup>163</sup></a>正。后官至大晟乐乐府待制。
+……当时李师师家有二邦彦，一 <em>周美成</em> ，一 <em>李士美</em> ，皆为道君 狎客 <span style="color: magenta; font-size: 80%">陪伴权贵游乐，亲暱而不拘礼节的人</span> 。士美因而为宰相。《贵耳集》卷下。《青泥莲花记》卷十三。《词苑丛谈》卷六。《本事词》卷上。《词林纪事》卷七。《宋稗类钞》卷四。</li>
+</ol>
+<blockquote>
+<p>并刀如水，吴盐胜雪，纤手破新橙。锦幄初温，兽烟不断，相对坐调笙。</p>
+<p>低声问：向谁行宿？城上已三更。马滑霜浓，不如休去，直是少人行！</p>
+<p>– 周邦彦《少年游》</p>
+</blockquote>
+<blockquote>
+<p>柳阴直，烟里丝丝弄碧。隋堤上、曾见几番，拂水飘绵送行色。登临望故国，谁识、京华倦客？长亭路，年去岁来，应折柔条过千尺。</p>
+<p>闲寻旧踪迹，又酒趁哀弦，灯照离席。梨花榆火催寒食。愁一箭风快，半篙波暖，回头迢递便数驿，望人在天北。</p>
+<p>凄恻，恨堆积！渐别浦萦回，津堠岑寂，斜阳冉冉春无极。念月榭携手，露桥闻笛。沉思前事，似梦里，泪暗滴。</p>
+<p>—— 周邦彦《兰陵王·柳》</p>
+</blockquote>
+<ol start="6" style="list-style-type: decimal">
 <li><p><span id="宋轶二十七-周邦彦-6"></span>
-宣和中，李师师以能歌舞称。时周邦彦为太学生，每游其家。一夕，值祐陵临幸，仓卒隐去。既而赋小词，所谓「并刀如水，吴盐胜雪」者，盖纪此夕事也。未几，李被宣唤，遂歌于上前，问谁所写，则以邦彦对。于是遂与解褐，自此通显。既而朝廷赐酺，师师又歌《大酺》、《六丑》二解，上顾教坊使袁绹，问绹，曰：「此起居舍人新知潞州周邦彦作也。」问《六丑》之义，莫能对，急召邦彦问之。对曰：「此犯六调，皆声之美者，然绝难歌。昔高阳氏有子六人，才而丑，故以比之。」上喜，意将留行。且以近者祥瑞沓至，将使播之乐府，命蔡元长微叩之。邦彦云：「某老矣，颇悔少作。」会起居郎张果与之不咸，廉知邦彦尝于亲王席上作小词赠舞鬟云：「歌席上，无赖是横波。宝髻玲珑欹玉燕，绣巾柔腻掩香罗。何况会婆娑。无个事，因甚敛双蛾。浅淡梳妆疑是画，惺松言语胜闻歌。好处是情多。」为蔡道其事。上知之，由是得罪。师师后入中，封瀛国夫人。朱希真有诗云：「解唱《阳关》别调声，前朝惟有李夫人。」即其人也。《浩然斋雅谈》卷下。</p></li>
+<a href="%E5%AE%8B%E5%B9%B4%E5%8F%B7.html#%E5%B9%B4%E5%8F%B7-%E5%8C%97%E5%AE%8B">宣和</a>中，李师师以能歌舞称。时周邦彦为太学生，每游其家。一夕，值祐陵临幸，仓卒隐去。既而赋小词，所谓「并刀如水，吴盐胜雪」者，盖纪此夕事也。未几，李被宣唤，遂歌于上前，问谁所写，则以邦彦对。于是遂与 解褐 <span style="color: magenta; font-size: 80%">jiě hè。解去平民所穿的衣服，易上官服。指入仕</span> ，自此通显。既而朝廷赐酺，师师又歌《大酺》、《六丑》二解，上顾教坊使袁绹，问绹，曰：「此起居舍人新知潞州周邦彦作也。」问《六丑》之义，莫能对，急召邦彦问之。对曰：「此犯六调，皆声之美者，然绝难歌。昔高阳氏有子六人，才而丑，故以比之。」上喜，意将留行。且以近者祥瑞沓至，将使播之乐府，命蔡元长微叩之。邦彦云：「某老矣，颇悔少作。」会起居郎张果与之不咸，廉知邦彦尝于亲王席上作小词赠舞鬟云：「歌席上，无赖是横波。宝髻玲珑欹玉燕，绣巾柔腻掩香罗。何况会婆娑。无个事，因甚敛双蛾。浅淡梳妆疑是画，惺松言语胜闻歌。好处是情多。」为蔡道其事。上知之，由是得罪。师师后入中，封瀛国夫人。朱希真有诗云：「解唱《阳关》别调声，前朝惟有李夫人。」即其人也。《浩然斋雅谈》卷下。</p></li>
 <li><p><span id="宋轶二十七-周邦彦-7"></span>
 周邦彦待制尝为刘昺之祖作埋铭，以白金数十斤为润笔，不受。刘无以报之，因除户部尚书，荐以自代。后刘缘坐王采𫍚言事得罪，美成亦落职，罢知顺昌府宫祠。周笑谓人曰：「世有门生累举主者多矣，独邦彦乃为举主所累，亦异事也。」《鸡肋编》卷中。</p></li>
 <li><p><span id="宋轶二十七-周邦彦-8"></span>
@@ -1214,9 +1233,13 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="宋轶二十七-李师师-1"></span>
-东京角妓李师师，住金线巷，色艺冠绝。徽宗自政和后多微行，乘小轿子，数内臣导从。置行幸局，局中以帝出日谓之「有排当」，次日未还，则传旨称疮痍，不坐朝。尝往来师师家，甚被宠昵。……靖康之乱，师师南徙，有人遇之于湖湘间，衰老憔悴，无复向时风态。刘屏山诗云：「辇毂繁华事可伤，师师垂老过湖湘。缕金檀板今无色，一曲当年动帝王。」《青泥莲花记》卷十三。</p></li>
+东京 角妓 <span style="color: magenta; font-size: 80%">色艺双全的妓女</span> 李师师，住金线巷，色艺冠绝。徽宗自<a href="%E5%AE%8B%E5%B9%B4%E5%8F%B7.html#%E5%B9%B4%E5%8F%B7-%E5%8C%97%E5%AE%8B">政和</a>后多微行，乘小轿子，数内臣导从。置行幸局，局中以帝出日谓之「有 排当 <span style="color: magenta; font-size: 80%">帝王宫中设宴之称</span> 」，次日未还，则传旨称 疮痍 <span style="color: magenta; font-size: 80%">创伤、伤痕</span> ，不坐朝。尝往来师师家，甚被宠昵。
+……靖康之乱，师师南徙，有人遇之于 湖湘 <span style="color: magenta; font-size: 80%">湖南省洞庭湖和湘江地带。常用来代指湖南</span> 间，衰老憔悴，无复向时风态。 <em>刘屏山</em> 诗云：「 辇毂 <span style="color: magenta; font-size: 80%">niǎn gǔ。皇帝的车舆。代指京城</span> 繁华事可伤，师师垂老过湖湘。缕金 檀板 <span style="color: magenta; font-size: 80%">乐器名。檀木制成的拍板</span> 今无色，一曲当年动帝王。」《青泥莲花记》卷十三。</p></li>
 <li><p><span id="宋轶二十七-李师师-2"></span>
-政和间，汴都平康之盛，而李师师、崔念月二妓名著一时。晁冲之叔用每会饮，多召侑席。其后十许年再来京师，二人尚在，而声名溢于京国，李生者，门第尤峻。叔用追感往昔，成二诗，以示江子之，其一云：「少年使酒来京华，纵步曾游小小家。看舞霓裳羽衣曲，听歌玉树后庭花。门侵杨柳垂珠箔，窗对樱桃卷碧纱。坐客半惊随逝水，吾人星散落天涯。」其二云：「春风踏月过章华，青鸟双邀阿母家。系马柳低当户叶，迎人桃出隔墙花。鬓深钗暖云侵脸，臂薄衫寒玉照纱。莫作一生惆怅事，邻州不在海西涯。」靖康中，李生与同辇赵元奴，及筑毬吹笛袁陶、武震辈，例籍其家。李生流落来浙中，士大夫犹邀之以听其歌，然憔悴无复向来之态矣。《墨庄漫录》卷八。《宋诗纪事》卷三十三。</p></li>
+<a href="%E5%AE%8B%E5%B9%B4%E5%8F%B7.html#%E5%B9%B4%E5%8F%B7-%E5%8C%97%E5%AE%8B">政和</a>间，汴都 平康 <span style="color: magenta; font-size: 80%">妓院，也称「平康坊」</span> 之盛，而李师师、 <em>崔念月</em> 二妓名著一时。 <em>晁冲之叔用</em> 每会饮，多召 侑 <span style="color: magenta; font-size: 80%">在筵席旁助兴，劝人吃喝</span> 席。
+其后十许年再来京师，二人尚在，而声名溢于 <em>京国</em> ， <em>李生</em> 者，门第尤峻。叔用追感往昔，成二诗，以示 <em>江子之</em> ，其一云：「少年使酒来京华，纵步曾游小小家。看舞霓裳羽衣曲，听歌玉树后庭花。门侵杨柳垂珠箔，窗对樱桃卷碧纱。坐客半惊随逝水，吾人星散落天涯。」其二云：「春风踏月过章华，青鸟双邀阿母家。系马柳低当户叶，迎人桃出隔墙花。鬓深钗暖云侵脸，臂薄衫寒玉照纱。莫作一生惆怅事，邻州不在海西涯。」
+靖康中，李生与 同辇 <span style="color: magenta; font-size: 80%">指与天子同车</span> <em>赵元奴</em> ，及 筑毬 <span style="color: magenta; font-size: 80%">古代以杖击或以足踢球</span> 吹笛袁陶、武震辈，例籍其家。
+李生流落来浙中，士大夫犹邀之以听其歌，然憔悴无复向来之态矣。《墨庄漫录》卷八。《宋诗纪事》卷三十三。</p></li>
 <li><p><span id="宋轶二十七-李师师-3"></span>
 见周邦彦<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%83.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B8%83-%E5%91%A8%E9%82%A6%E5%BD%A6-5">5</a>。</p></li>
 <li><p><span id="宋轶二十七-李师师-4"></span>
@@ -1340,6 +1363,7 @@
 </ol>
 </div>
 </div>
+
   <div class="chapter-nav">
 <div class="prev"><a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AD.html"><span class="header-section-number">36</span> 宋人轶事汇编卷二十六</a></div>
 <div class="next"><a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html"><span class="header-section-number">38</span> 宋人轶事汇编卷二十八</a></div>
@@ -1445,7 +1469,7 @@
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-06-02.</p>
+    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-06-04.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
