--- a/宋人轶事汇编卷二十三.html
+++ b/宋人轶事汇编卷二十三.html
@@ -970,7 +970,7 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="宋轶二十三-晁冲之-1"></span>
-晁冲之，字叔用，初字用道。举进士，与陵阳喻汝砺为同门生。少年豪华自放，挟轻肥，游帝京，狎官妓李师师，缠头以千万，酒船歌板，宾从杂遝，声艳一时。绍圣初，党祸起，群从多在党中，被谪逐，遂飘然栖遁于具茨之下，号具茨先生。十余年后，重过京师，忆旧游，作《无题》诗二首，为时所传。《宋诗钞·具茨集钞》。</p></li>
+晁冲之，字 <em>叔用</em> ，初字 <em>用道</em> 。举进士，与陵阳 <em>喻汝砺</em> 为同门生。少年豪华自放，挟 轻肥 <span style="color: magenta; font-size: 80%">裘轻马肥。比喻贵显</span> ，游帝京，狎官妓李师师， 缠头<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content="&lt;p&gt;古时舞者用彩锦缠头，当宾客宴集，赏舞完毕，常赠罗锦给舞者为彩，称为「缠头」。对于青楼歌妓，宾客也往往赐锦，或以财物代替。后把送给歌伎或妓女之财物称为「缠头」。&lt;/p&gt;"><sup>162</sup></a>以千万，酒船歌板，宾从 杂遝 <span style="color: magenta; font-size: 80%">zá tà。亦作“杂沓”，众多而纷乱的样子</span> ，声艳一时。<a href="%E5%AE%8B%E5%B9%B4%E5%8F%B7.html#%E5%B9%B4%E5%8F%B7-%E5%8C%97%E5%AE%8B">绍圣</a>初，党祸起， 群从 <span style="color: magenta; font-size: 80%">从，同宗堂房亲属。群从多指同宗堂兄弟</span> 多在党中，被谪逐，遂飘然栖遁于 具茨 <span style="color: magenta; font-size: 80%">山名﹐在今河南省密县</span> 之下，号具茨先生。十余年后，重过京师，忆旧游，作《无题》诗二首，为时所传。《宋诗钞·具茨集钞》。</p></li>
 <li><p><span id="宋轶二十三-晁冲之-2"></span>
 见李师师<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%83.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B8%83-%E6%9D%8E%E5%B8%88%E5%B8%88-2">2</a>。</p></li>
 <li><p><span id="宋轶二十三-晁冲之-3"></span>
@@ -995,6 +995,7 @@
 </ol>
 </div>
 </div>
+
   <div class="chapter-nav">
 <div class="prev"><a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%8C.html"><span class="header-section-number">32</span> 宋人轶事汇编卷二十二</a></div>
 <div class="next"><a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%9B%9B.html"><span class="header-section-number">34</span> 宋人轶事汇编卷二十四</a></div>
@@ -1070,7 +1071,7 @@
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-06-02.</p>
+    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-06-04.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
